# getting-started

./: .gitignore  Dockerfile  README.md  api.ipynb  cirq.ipynb  cudaq.ipynb  environment.yml  helpers.py  pennylane.ipynb  projectq.ipynb  pyproject.toml  qbraid.ipynb  qiskit.ipynb  requirements.txt  test_notebooks.py
.githooks/: pre-commit
.github/workflows/: test_notebooks.yml  test_notebooks_uv.yml
api/: README.md  data.json  main.ipynb
braket/: README.md  main.ipynb
cirq/: README.md  main.ipynb
cuda-quantum/: Dockerfile  README.md  ionq.Dockerfile  main.ipynb
curl/: README.md  main.ipynb
pennylane/: README.md  main.ipynb
projectq/: README.md  main.ipynb
pytket/: README.md  main.ipynb
qiskit/: README.md  main.ipynb
qsharp/: Operation.qs  README.md  main.ipynb
qutip/: README.md  main.ipynb
tests/: __init__.py  constants.py  test_notebooks.py
xacc/: README.md  main.ipynb
