[project]
name = "ionq-getting-started"
version = "1.0.0"
description = "IonQ Quantum Computing Samples - Getting started with various quantum SDKs"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "Apache-2.0" }

dependencies = [
    # Core dependencies
    "jupyter>=1.0.0",
    "pytest>=7.0.0",
    "nbconvert>=7.0.0",
    "requests>=2.28.0",
    "ipykernel>=6.0.0",

    # Quantum SDKs
    "qiskit[visualization]>=1.0.0",
    "qiskit-ionq>=0.5.0",
    "cirq>=1.0.0",
    "cirq-ionq>=1.0.0",
    "pennylane>=0.30.0",
    "pennylane-ionq>=0.30.0",
    "projectq>=0.8.0",
    "cudaq>=0.6.0",

    # Visualization and utilities
    "matplotlib>=3.5.0",
    "pylatexenc>=2.10",
    "pyqasm>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "nbconvert>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
